Fixing problem with aligning items

--- a/src/components/MainNavigation.module.css
+++ b/src/components/MainNavigation.module.css
@@ -13,6 +13,7 @@
   gap: 1rem;
   text-decoration: none;
   list-style: none;
+  padding-left: 0;
 
 }
 
